--- a/MyProject.css
+++ b/MyProject.css
@@ -82,6 +82,17 @@
     background-repeat: no-repeat;
 }
 
+.cont .row .box.box:nth-child(7){
+
+ background: url("./projectBg/Nbase.jpg");
+
+    background-position: center;
+
+    background-size: cover;
+
+    background-repeat: no-repeat;
+
+}
 
 .cont .row .box p {
     font-family: 'PT Sans', sans-serif;
