--- a/MyProject.css
+++ b/MyProject.css
@@ -82,7 +82,7 @@
     background-repeat: no-repeat;
 }
 
-.cont .row .box.box:nth-child(7){
+.cont .row .box:nth-child(7){
 
  background: url("./projectBg/Nbase.jpg");
 
