--- a/MyProject.css
+++ b/MyProject.css
@@ -20,7 +20,7 @@
     justify-content: space-between !important;
     align-items: center;
     margin-top: 9px;
-    padding: 9px 9px;
+    padding: 9px 0px 9px 0px;
     width: 100%;
     height: 100%;
     overflow-x: auto;
