--- a/MyProject.css
+++ b/MyProject.css
@@ -45,7 +45,12 @@
 }
 .cont .row .box:last-child{
 
-  margin: 0px 0px 0px 9px;
+  margin: 0px 0px 0px 9px !important;
+
+}
+.cont .row .box:first-child{
+
+  margin: 0px 9px 0px 0px !important;
 
 }
 
