--- a/Projects/BrickBall/style.css
+++ b/Projects/BrickBall/style.css
@@ -27,3 +27,9 @@ button{
   opacity: 0;
   border-radius: 9px;
 }
+p{
+  margin-bottom: 8px;
+  font-family: sans-serif;
+  font-size: 0.5em;
+  color: #949494;
+}
