--- a/MyProject.css
+++ b/MyProject.css
@@ -94,13 +94,32 @@
 
 .cont .row .box:nth-child(7){
  background: url("./projectBg/Nbase.jpg");
-
     background-position: center;
-
     background-size: cover;
-
     background-repeat: no-repeat;
 }
+
+.cont .row .box:nth-child(8){
+ background: url("./projectBg/TextUtils.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.cont .row .box:nth-child(9){
+ background: url("./projectBg/Brick.svg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.cont .row .box:nth-child(10){
+ background: url("./projectBg/PingPong.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 
 .cont .row .box p {
     font-family: 'PT Sans', sans-serif;
