--- a/Projects/Tic-Tac-Toe/style.css
+++ b/Projects/Tic-Tac-Toe/style.css
@@ -1,144 +1,98 @@
-*{
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: monospace !important;
-  font-weight: 900 !important;
-}
-
 body {
     font-size: 15pt;
-    
-    
+    display: flex;
+    /*align-items: center;
+    height: 100vh;*/
 }
-#result{
-  width: 60vw;
-  margin: 0px auto;
-  font-size: 25px;
-  height: 50px;
-  text-align: center;
-  position: absolute;
-  top: 20px;
-  text-transform: uppercase;
-  font-weight: 900;
- font-family:monospace;
- color: black;
-}
-#turn{
-  width: 90vw;
-  margin: 0px auto;
-  font-size: 25px;
-
-  height: 50px;
-  text-align: center;
-  position: absolute;
-  top: 50px;
-  color: black;
-  font-weight: 900;
-  text-transform: uppercase;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: monospace;
 }
-.body{
+#root{
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+}
 
-    margin: 120px auto;
-    height: 70vh;
+.inpbox{
+  width: calc(100vw/3.5);
+  aspect-ratio: 1/1;
+  background: linear-gradient(45deg,#A9D3E1,#81C1D6,#64BDDA);
+  margin: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 1px 1px 3px #9EDBF3C2;
+}
+
+span{
+  font-weight: 700!important;
+  -webkit-text-stroke: 1.3px;
   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
-.inp{
-  width: 90px;
-  height: 90px;
+
+.xplayer{
+  color: #235BC1 !important;
+  font-size: 2.3em;
+  -webkit-text-fill-color: #42E1D2;
+}
+.yplayer{
+  color: blue !important;
+  font-size: 2.3em;
+  -webkit-text-fill-color: #2ABDF8;
+}
+
+.cont{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cont h4{
+  text-align: center;
+  padding: 9px;
+}
+
+h4:first-child{
+  opacity: 0;
+}
+
+.btnrest{
+  width: 100%;
+  align-self: center;
+  padding: 12px 18px !important;
   border-radius: 5px;
-  transition: 0.5s;
-  box-shadow: inset 0px 0px 4px #6F6FA4, 0px 0px 6px 2px  black;
-  background: rgba(204, 193, 157, 1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 700;
-  color: rgba(87, 69, 10, 1);
-  font-size: 50px;
-  margin: 5px;
-  text-shadow: 0px 0px 2px cyan;
-}
-.screen{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
-}
-.rest button{
-  transition: 0.3s;
-  height: 50px;
-  width: 150px;
-  background: hsla(44, 35%, 35%, 1);
-border: none;
-box-shadow:1px 1px 3px #2C2C30;
-color: orange;
-border-radius: 5px;
-font-weight: 900;
-font-family: monospace;
-font-size: 14px;
-margin-top: 20px;
-}
-button:hover{
-  animation: scale 0.4s ease-in;
-}
-
-@keyframes scale{
-  to{
-    scale: 1 1;
-  }
-  from{
-  scale: 0.8 0.8;
-  }
-}
-
-select{
-  text-transform: capitalize;
-  transition: 0.3s;
-  margin-top: 10px;
-  padding: 6px 6px;
-  background: #464655;
-  color: white;
   border: none;
-  border-radius: 5px;
+  margin-top: 12px;
+  font-size: 15px;
+  box-shadow: 0px 0px 6px #ccc;
+  background: linear-gradient(45deg,#A9D3E1,#81C1D6,#64BDDA);
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: blue;
+  -webkit-text-fill-color: #03B0E0 !important;
+  display: none;
 }
-.board2{
-  transition: 0.5s;
-  background: #DADBE6;
-  box-shadow: 0px 0px 4px #7A7FB9 ,inset 0px 0px 4px black ;
-  color: #9DA2DA !important;
-  text-shadow: 0px 0px 2px black;
+
+.btn{
+  width: fit-content;
+  align-self: center;
+  min-height: 65px;
+  margin-top: 9px;
 }
-.btn1{
-  transition: 0.3s;
-  background:#DADBE6 !important;
-  color:  #353540 !important;
-  box-shadow: 1px 1px 3px #2C2C30;
+
+#res{
+  font-size: 30px;
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: blue;
+  color: white;
 }
-select:focus{
-  outline: none;
-}
-.board3{
-  background: #8F98F6;
-  box-shadow: -2px -2px 2px #1825B7,inset -2px -2px 0px 0px dimgray;
-  color: #4450DD !important;
-  text-shadow: 0px 0px 3px white;
-}
-.btn2{
-  background: #7178D2 !important;
-  color: white !important;
-}
-.board4{
-  background: #FFDA13 !important;
-  box-shadow: 0px 0px 3px black , inset 0px 0px 3px whitesmoke !important;
-  color: hotpink !important;
-}
-.btn3{
-  background: #D9C662 !important;
-  color: #48463D !important;
+
+#chnc{
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: blue;
+  color: white;
+  letter-spacing: 2px;
 }
