--- a/MyProject.css
+++ b/MyProject.css
@@ -20,12 +20,12 @@
     justify-content: space-between !important;
     align-items: center;
     margin-top: 9px;
-    padding: 9px 0px 9px 0px;
     width: 100%;
     height: 100%;
     overflow-x: auto;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
+    position: relative;
 }
 
 ::-webkit-scrollbar{
@@ -188,18 +188,37 @@
 }
 
 .btnc{
-    padding: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 4px;
+    height: 40px;
+    width: 40px;
     background-color: transparent;
     font-weight: 900;
     font-size: 1.9em;
-    position: absolute;
+    position: fixed;
     outline: none;
     border: none;
     bottom: 0;
     top: 0;
+    margin: auto 0 auto 0;
     z-index: 11111;
-    color: orange;
+    color: #edc74d;
+    border-radius: 50%;
 }
+
+#scrlbtnR{
+   right: 5%;
+}
+
+#scrlbtnL{
+   left: 5%;
+}
+
+
+
 .btnc:first-child{
     right: 30px;
 }
