--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ input#check {
         width: 100%;
         height: 50vh;
         text-align: center;
-        opacity: 0;
+        display: none;
         transition: all 0.3s;
 
     }
@@ -176,7 +176,7 @@ input#check {
     }
 
     #check:checked~.nav .list ul {
-        opacity: 1;
+        display: block;
     }
 
     .cont {
